--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uniquelyelite/custom-node-console",
+  "name": "custom-node-console",
   "version": "1.0.0",
   "description": "NodeJS Console Improved With Colours And Custom Logging Types",
   "main": "lib/index.js",
